--- a/frontend/src/components/PersonForm.css
+++ b/frontend/src/components/PersonForm.css
@@ -1,15 +1,27 @@
-.formContainer{
+.formContainer, .imageContainer{
     padding: 2em;
-    margin: auto;
-    width: fit-content;
     display: flex;
-    justify-content:center;
+    border: solid black 4px;
+    border-radius: 10px;
+}
+
+.formContainer{width: 25em;}
+.imageContainer{width: fit-content; align-items: center;}
+
+
+.userImage{flex-basis: 20%; text-align: center;}
+
+.userImage h4{margin-top: 0;}
+
+.fieldset
+{ border: 2px solid lightsteelblue; border-radius: 5px; padding: 1em; margin: 0 0 2em 2em; flex-basis: 80%; }
+
+.formTemplate{
+    display: flex;
+    flex-wrap: wrap;
     align-items: center;
 }
 
-.userImage, fieldset
-{ border: 2px solid lightsteelblue; border-radius: 5px; padding: 1em; margin: 0 0 2em 2em; }
-
-.formTemplate input{
-    margin: 0 1em 0 0;
+.inputField{
+    margin: 1em;
 }
