--- a/frontend/src/components/PersonForm.css
+++ b/frontend/src/components/PersonForm.css
@@ -3,10 +3,11 @@
     display: flex;
     border: solid black 4px;
     border-radius: 10px;
+    margin: 0 0 1rem 1rem;
 }
 
 .formContainer{width: 25em;}
-.imageContainer{width: fit-content; align-items: center;}
+.imageContainer{width: fit-content; align-items: center; background-color: white;}
 
 
 .userImage{flex-basis: 20%; text-align: center;}
